# lifiswap

./: Cargo.toml  Makefile  README.md  install.ps1  install.sh
.github/workflows/: cd.yml  rust-publish.yml
.windsurf/workflows/: lifiswap-cli.md
lifiswap/: Cargo.toml
lifiswap-btc/: Cargo.toml
lifiswap-btc/src/: api.rs  errors.rs  executor.rs  lib.rs  provider.rs  signer.rs
lifiswap-btc/src/tasks/: confirm.rs  mod.rs  sign.rs
lifiswap-cli/: Cargo.toml
lifiswap-cli/src/: app.rs  main.rs  output.rs  progress.rs
lifiswap-cli/src/commands/: chains.rs  connections.rs  gas.rs  mod.rs  quote.rs  routes.rs  status.rs  tokens.rs  tools.rs
lifiswap-evm/: Cargo.toml
lifiswap-evm/examples/: compare_routes.rs  cross_chain_usdc.rs  query_only.rs  swap.rs
lifiswap-evm/src/: errors.rs  executor.rs  lib.rs  permit2.rs  provider.rs  rpc.rs  signer.rs  tasks.rs
lifiswap-evm/src/tasks/: allowance.rs  batched.rs  mod.rs  native_permit.rs  permits.rs  relay.rs  sign_execute.rs  wait_receipt.rs
lifiswap-sui/: Cargo.toml
lifiswap-sui/src/: lib.rs
lifiswap-svm/: Cargo.toml
lifiswap-svm/src/: errors.rs  executor.rs  jito.rs  lib.rs  provider.rs  rpc.rs  signer.rs
lifiswap-svm/src/tasks/: jito_send_confirm.rs  mod.rs  send_confirm.rs  sign.rs
lifiswap/src/: client.rs  error.rs  http.rs  lib.rs  provider.rs
lifiswap/src/actions/: balance.rs  mod.rs  name_service.rs
lifiswap/src/api/: chains.rs  connections.rs  gas.rs  mod.rs  patcher.rs  quote.rs  relay.rs  routes.rs  status.rs  step_transaction.rs  tokens.rs  tools.rs  wallet.rs
lifiswap/src/execution/: balance.rs  convert.rs  engine.rs  messages.rs  mod.rs  poll.rs  restart.rs  run.rs  state.rs  status.rs  step_comparison.rs  task.rs  test_helpers.rs
lifiswap/src/execution/tasks/: check_balance.rs  mod.rs  prepare_transaction.rs  wait_status.rs
lifiswap/src/types/: chain.rs  common.rs  connection.rs  execution.rs  gas.rs  mod.rs  patcher.rs  quote.rs  relay.rs  route.rs  status.rs  step.rs  token.rs  token_units.rs  tool.rs  wallet.rs
lifiswap/src/utils/: mod.rs
lifiswap/tests/: integration.rs
