[package]
name = "lifiswap-btc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiFi SDK - Bitcoin chain provider"

[dependencies]
lifiswap = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
