[package]
name = "lifiswap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "lifiswap"
path = "src/main.rs"

[dependencies]
lifiswap = { workspace = true }
lifiswap-evm = { workspace = true }
lifiswap-svm = { workspace = true }
lifiswap-btc = { workspace = true }

clap = { version = "4", features = ["derive", "env", "color"] }
tokio = { workspace = true }
comfy-table = "7"
console = "0.15"
indicatif = "0.18"
dialoguer = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
alloy = { workspace = true }
solana-sdk = { workspace = true }
bitcoin = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
