[package]
name = "lifiswap-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiFi SDK - EVM chain provider (alloy-based)"

[dependencies]
lifiswap = { workspace = true }
alloy = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
