[package]
name = "lifiswap-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiFi SDK - EVM chain provider (alloy-based)"

[dependencies]
lifiswap = { workspace = true }
alloy = { workspace = true, features = ["dyn-abi", "eip712", "ens"] }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
