[package]
name = "lifiswap-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiFi SDK - EVM chain provider (alloy-based)"

[dependencies]
lifiswap = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"

[lints]
workspace = true
