[package]
name = "lifiswap-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LiFi SDK - Solana chain provider"

[dependencies]
lifiswap = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-commitment-config = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
